feat(docs): generate Swagger documentation for user
